added a paragraph section to demo branching

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 
   <body>
     <h1>Learning Git Branching and Merging</h1>
+    <p>
+      a paragraph which will be committed after creating the newLayout branch
+    </p>
   </body>
 </html>
